# nonlinear-equations-solver

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  defines.h  main.cpp  plottingGraph.cpp  plottingGraph.h  solver  solvingEquation.cpp  solvingEquation.h
extrasrc/: fptypes.hh
fparser/: fparser_gmpint.hh  fparser_mpfr.hh
lib/fparser/: fparser.cc  fpoptimizer.cc
src/: defines.h  main.cpp
src/extra/: parser.cpp  parser.h  profiler.cpp  profiler.h
src/menu/: menu.cpp  menu.h
src/plotter/: plotter.cpp  plotter.h
src/plotting/: plottingGraph.cpp
src/solver/: solvers.h  solvingEquation.h
src/solver/base/: solver.cpp  solver.h
src/solver/bisection/: bisection_solver.cpp  bisection_solver.h
src/solver/chord/: chord_solver.cpp  chord_solver.h
src/solver/iterations_with_max_iterations/: iterations_with_max_iteration_solver.cpp  iterations_with_max_iteration_solver.h
src/solver/iterations_without_max_iterations/: iterations_without_max_iterations_solver.cpp  iterations_without_max_iterations_solver.h
src/solver/newton_with_iterations/: newton_with_iterations_solver.cpp  newton_with_iterations_solver.h
src/solver/newton_without_iterations/: newton_without_iterations_solver.cpp  newton_without_iterations_solver.h
